--- a/DS18B20/DS18B20.md
+++ b/DS18B20/DS18B20.md
@@ -70,6 +70,8 @@ ROM指令：F0,33,55,CC,EC
 
 ![](.\pictures\Quicker_20240712_213150.png)
 
+![](.\pictures\Quicker_20240713_100430.png)
+
 ## 时序图
 
 ![](.\pictures\Quicker_20240713_075816.png)
